--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "keywords": [],
   "author": "Duke",
   "dependencies": {
-    "preact": "10.0.0-alpha.0",
+    "preact": "10.0.0-beta.1",
     "mini.css": "3.0.1",
-    "preact-router": "^2.6.1",
+    "preact-router": "3.0.0",
     "unistore": "^3.4.1"
   },
   "devDependencies": {
