--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Duke",
   "dependencies": {
     "preact": "10.0.0-beta.1",
-    "mini.css": "3.0.1",
+    "purecss": "^1.0.0",
     "preact-router": "3.0.0",
     "unistore": "^3.4.1"
   },
