--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "keywords": [],
   "author": "Duke",
   "dependencies": {
-    "preact": "10.0.0-beta.2",
+    "preact": "10.0.0-beta.3",
     "purecss": "^1.0.0",
     "preact-router": "3.0.0",
-    "unistore": "^3.4.1"
+    "unistore": "^3.4.1",
+    "use-global-hook": "^0.1.7"
   },
   "devDependencies": {
     "typescript": "^3.2.2"
