--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "Duke",
   "dependencies": {
-    "preact": "10.0.0-beta.3",
+    "preact": "10.0.0-rc.0",
     "purecss": "^1.0.0",
     "preact-router": "3.0.0",
     "unistore": "^3.4.1",
